ECA-3316: break out CVC EAC implementation to implementation class, gives possible room for other CVC implementations.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@18225 37aeb1de-b14b-0410-9a0e-82b28170d228